# wcheck

./: CHANGELOG.md  README.md  mkdocs.yml  pyproject.toml  setup.py
.github/workflows/: release.yml
docs/: cli.md  index.md  installation.md  quickstart.md
src/wcheck/: gui.py  tui.py  wcheck.py
tests/: conftest.py  test_config_list.py  test_config_versions.py  test_status.py  test_wconfig.py
wcheck/: wcheck.py
