[tool.poetry]
name = "wcheck"
version = "0.1.1"
description = "Tool to compare different versions of git repositories and reports their differences."
authors = ["Daniel Pastor <danpasmor@gmail.com>"]
license = "MIT"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Topic :: Software Development :: Version Control :: Git",
]

[tool.poetry.dependencies]
python = "^3.8,<3.11"
rich = "^12.6.0"
pendulum = "^2.1.2"
gitpython = "^3.1.29"
pyyaml = "^6.0"
pyside6 = "^6.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
